# robotcode

./: .eslintignore  .eslintrc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .robotignore  .vscodeignore  404.html  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  bundled_requirements.txt  cliff.toml  dummy.json  esbuild.mjs  eslint.config.mjs  hatch.toml  index.html  language-configuration.json  log.ini  mkdocs.yml  mypy.ini  output.md  package-lock.json  package.json  pyproject.toml  report.html  robot.toml  robotcode-0.0.1.vsix  sitemap.xml  tsconfig.json  versions.json  (+1 more)
.devcontainer/: Dockerfile  Dockerfile.ubuntu  devcontaimer.json  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
0.28/: 404.html  index.html  sitemap.xml
0.29/: 404.html  index.html  sitemap.xml
0.30/: 404.html  index.html  sitemap.xml
0.30.0/: 404.html  index.html  sitemap.xml
0.31/: 404.html  index.html  sitemap.xml
0.31.0/: 404.html  index.html  sitemap.xml
0.33/: 404.html  index.html  sitemap.xml
0.34/: sitemap.xml
0.37/: 404.html  index.html  sitemap.xml
0.40/: sitemap.xml
0.43/: sitemap.xml
0.47/: 404.html  CNAME  index.html  sitemap.xml
0.48/: 404.html  index.html  sitemap.xml
0.55/: 404.html  index.html  sitemap.xml
0.60/: index.html  sitemap.xml
0.61/: sitemap.xml
0.62/: sitemap.xml
0.67/: sitemap.xml
0.68/: 404.html  sitemap.xml
0.75/: sitemap.xml
0.79/: 404.html  index.html  sitemap.xml
chat-plugins/: .upstream.json
dev/: 404.html  index.html
dev-docs/: semantic-model.md
docs/: 99_features.md  index.md  installation.md  package-lock.json  package.json  tsconfig.json
etc/: robot.json  robot.toml.json
features/: index.html
installation/: index.html
intellij-client/: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
latest/: 404.html  index.html
resources/: report_issue_body_template.md  report_issue_data_template.md
robotcode/: __main__.py  __version__.py  _version.py
scripts/: create_cmdline_doc.py  create_robot_toml_json_schema.py  deploy_docs.py  devel.py  extract_release_notes.py  generate_rf_options.py  generate_tmllanguage.py  get_release_version.py  install_bundled_editable.py  install_packages.py  is_prerelease.py  npm.py  npm_package.py  npm_publish.py  npm_run.py  package.py  publish.py  sync_chat_plugin.py  tools.py  updateVersions.js  update_changelog.py  update_doc_links.py  update_git_versions.py  update_versions.py
search/: search_index.json
src/: extension.ts
syntaxes/: codeblock_robotframework.tmLanguage.json  robotframework-repl.tmLanguage.json  robotframework.tmLanguage.json  robotframework.tmLanguage.template.json
test_results/: robotcode_python.xml
tests/: conftest.py  test_common.py  test_jsonrpcprotocol.py  test_robotcode.py  test_second.py
tests/robotcode/language_server/robotframework/parts/data/: .gitignore  .robot.toml  .robotignore  Pipfile  README.md  document_highlight.robot  foldingrange.robot  goto.robot  hover.robot  logging.json  pyproject.toml  references.robot  robocop.toml  robot.toml
tests/robotcode/language_server/robotframework/parts/data/data/: first.yml  second.yml
tests/robotcode/language_server/robotframework/parts/data/lib/: DuplicateTests.py  LibraryWithErrors.py  Signatures.py  alibrary.py  dynamicvars.py  literal_tester.py  myvariables.py
tests/robotcode/language_server/robotframework/parts/data/libs/: myvariables.py
tests/robotcode/language_server/robotframework/parts/data/resources/: embedded_args.resource  firstresource.resource  testvars.yml
tests/robotcode/language_server/robotframework/parts/data/resources/folder_a/: duplicated.resource
tests/robotcode/language_server/robotframework/parts/data/resources/folder_b/: duplicated.resource
tests/robotcode/language_server/robotframework/parts/data/tests/: __init__.robot  bddstyle.robot  code_action_show_documentation.robot  document_highlight.robot  duplicated_resources.robot  external_libray.robot  foldingrange.robot  goto.robot  hover.robot  old_for.robot  playground.robot  references.robot  remotetest.robot  reserved.robot  sematic_tokenizing.robot  setup_teardown.robot  signature_help.robot  symbols.robot  templates.robot  templates2.robot  variables.robot  very_big_file.robot
tests/robotcode/language_server/robotframework/parts/data/tests/discovery/: .not_discovered.robot  discovered__.robot
tests/robotcode/language_server/robotframework/parts/data/tests/discovery/duplicated/: part2__suite.robot  simple  suite.robot
tests/robotcode/language_server/robotframework/parts/data/tests/extras/: fibonaci.robot  test.robot
tests/robotcode/language_server/robotframework/parts/data/tests/tags/: first.robot  second.robot
tests/robotcode/language_server/robotframework/parts/data/tests/tags/sub/: __init__.robot  first.robot
tests/robotcode/language_server/robotframework/parts/data/tests/tasks/: some_tasks.robot
tests/robotcode/language_server/robotframework/parts/data/tests/versions/rf61/: __init__.robot  embedded_keywords.robot  indexed_variables.robot  jsonvariables.robot  sometasks.robot  suite_with_name.robot  vars.json
tests/robotcode/language_server/robotframework/parts/data/tests/versions/rf61/sub_suite/: __init__.robot  first.robot
tests/robotcode/language_server/robotframework/parts/data/tests/versions/rf70/: literal.robot  vartest.robot
tests/robotcode/language_server/robotframework/parts/data/tests/versions/rf72/: grouptest.robot
tests/robotcode/language_server/robotframework/parts/data/tests/versions/rf73/: variable_conversion.robot
tests/robotcode/language_server/robotframework/parts/data/tests1/: first.robot
types/: vscode.proposed.notebookReplDocument.d.ts
vscode-client/: config.ts  debugmanager.ts  extension.ts  keywordsTreeViewProvider.ts  languageToolsManager.ts  languageclientsmanger.ts  net_utils.ts  notebook.ts  pythonmanger.ts  robottestadapter.ts  testcontrollermanager.ts  tsconfig.base.json  (+1 more)
(+8736 files in other folders)
