[build-system]
requires = ["hatchling>=1.12.2"]
build-backend = "hatchling.build"


[project]
name = "robotcode"
description = "Language server, debugger and tools for Robot Framework"
authors = [{ name = "Daniel Biehl", email = "dbiehl@live.de" }]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
license = { text = "Apache-2.0" }
keywords = [
  "Test",
  "Testing",
  "RobotFramework",
  "Keyword Driven",
  "Data Driven",
  "Acceptance Testing",
  "Acceptance Test Driven Development",
  "BDD",
  "Behavior Driven Testing",
  "BDT",
  "Robotic Process Automation",
  "RPA",
  "Language Server Protocol",
  "Debug Adapter Protocol",
  "Visual Studio Code",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Acceptance",
  "Topic :: Software Development :: Testing :: BDD",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
  "Typing :: Typed",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Intended Audience :: Developers",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Tool",
]
requires-python = ">=3.8"
dependencies = ["robotcode-plugin"]
dynamic = ["version"]


[project.urls]
Homepage = "https://robotcode.io"
Donate = "https://github.com/sponsors/d-biehl"
Documentation = "https://github.com/d-biehl/robotcode#readme"
Changelog = "https://github.com/d-biehl/robotcode/blob/main/CHANGELOG.md"
Issues = "https://github.com/d-biehl/robotcode/issues"
Source = "https://github.com/d-biehl/robotcode"

[project.scripts]
robotcode = "robotcode.cli:robotcode"


[project.optional-dependencies]
debugger = ["robotcode-debugger"]
language-server = ["robotcode-language-server"]
runner = ["robotcode-runner"]
analyze = ["robotcode-analyze"]
yaml = ["PyYAML>=5.4", "types-PyYAML>=5.4"]
lint = ["robotframework-robocop>=2.0.0"]
tidy = ["robotframework-tidy>=2.0.0"]
rest = ["docutils"]


[tool.semantic_release]
version_variable = [
  "robotcode/cli/__version__.py:__version__",
  "packages/core/robotcode/core/__version__.py:__version__",
  "packages/debugger/robotcode/debugger/__version__.py:__version__",
  "packages/jsonrpc2/robotcode/jsonrpc2/__version__.py:__version__",
  "packages/language_server/robotcode/language_server/__version__.py:__version__",
  "packages/modifiers/robotcode/modifiers/__version__.py:__version__",
  "packages/plugin/robotcode/plugin/__version__.py:__version__",
  "packages/runner/robotcode/runner/__version__.py:__version__",
  "packages/analyze/robotcode/analyze/__version__.py:__version__",
  "packages/robot/robotcode/robot/__version__.py:__version__",
]
version_pattern = ['package.json:"version": "{version}"']
branch = "main"
upload_to_release = false
upload_to_repository = false
build_command = "pip install hatch && hatch build"

[tool.black]
line-length = 120
target-version = ['py38']
extend-exclude = '''
(
  /(
    | bundled/libs
  )/
)
'''


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv -rf"
filterwarnings = "ignore:.*Using or importing the ABCs from 'collections' instead of from 'collections.abc'.*:DeprecationWarning"
testpaths = ["tests"]
junit_suite_name = "robotcode"
# console_output_style = "classic"
# log_cli = true
# log_cli_level = 4
# log_cli_format = "%(levelname)s %(name)s: %(message)s"
asyncio_mode = "auto"
faulthandler_timeout = 30


[tool.coverage.run]
omit = ["*tests*"]
source = ["robotcode"]


[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
fail_under = 40


[tool.ruff]
line-length = 120
target-version = "py38"
extend-exclude = ["bundled/libs"]
ignore = ["E741", "N805", "N999"]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  #"UP",
  "YTT",
  #"ANN",
  #"BLE",
  #"B",
  #"A"
  #"COM"
  # "C4", # TODO enable this
  "DTZ",
  "T10",
  # "EM",
  "ISC",
  "G",
  #"INP",
  "PIE",
  # "T20",
  "PT",
  "Q",
  "RET",
  # "SIM", # TODO enable this
  # "TID",
  # "TCH",
  # "ARG",
  # "PTH", # TODO enable this
  # "SLF", #  TODO enable this
  # "ERA", # TODO enable this
  "RSE",
  # "PL",
  #"TRY",
  "RUF",
  # "TID"

]


[tool.ruff.per-file-ignores]
#"__init__.py" = ["F401"]


[tool.mypy]
python_version = 3.8
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
implicit_optional = true
# disallow_untyped_decorators = false
disallow_subclassing_any = false
exclude = [
  "\\.mypy_cache",
  "\\.venv",
  "\\.hatch",
  "build",
  "dist",
  "out",
  "playground",
  "scripts",
  "bundled/libs",
]
mypy_path = [
  "typings",
  "packages/core",
  "packages/debugger",
  "packages/jsonrpc2",
  "packages/language_server",
  "packages/modifiers",
  "packages/plugin",
  "packages/robot",
  "packages/runner",
  "packages/analyze",
]
explicit_package_bases = true


[[tool.mypy.overrides]]
module = [
  "robot.*",
  "robotremoteserver.*",
  "debugpy.*",
  "robotidy.*",
  "robocop.*",
  "pytest_regtest.*",
  "pluggy",
]
ignore_missing_imports = true


# [tool.hatch.build.targets.wheel.hooks.mypyc]
# enable-by-default = false
# dependencies = ["hatch-mypyc", "types-PyYAML", "types-docutils"]
# require-runtime-dependencies = true
# include = [
#   "robotcode/utils/glob_path.py",
#   "robotcode/language_server/robotframework/diagnostics/analyzer.py",
# ]
# exclude = ["__main__.py", "__version__.py", "__init__.py", "typings", "tests"]


# [tool.hatch.build.targets.wheel.hooks.mypyc.options]
# # opt_level = "3"
# multi_file = true
#separate = true
#verbose = true
#include_runtime_files = false

[tool.pyright]
exclude = ["**/.hatch", "**/node_modules", "**/__pycache__", "bundled/libs"]
typeCheckingMode= "off"
pythonVersion = "3.8"
